# test-bank-webhook

./: .coveragerc  .gitignore  README.md  example.env  main.py  pyproject.toml  pytest.ini
_project_/: settings.py  urls.py
api/: exceptions.py  routers.py
api/serializers/: __init__.py  operation.py  organisation.py
api/tests/: conftest.py  operation_tests.py  organisation_tests.py  transaction_tests.py
api/views/: __init__.py  operation.py  organisation.py
core/: admin.py  apps.py  signals.py
core/migrations/: 0001_initial.py  0002_rename_webhookoperation_payment.py  0003_transaction.py
core/models/: __init__.py  operation.py  organisation.py
